--- a/src/sistemaventas/views/ProductosView.form
+++ b/src/sistemaventas/views/ProductosView.form
@@ -94,6 +94,9 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JTextField" name="jtId">
+          <Events>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jtIdKeyTyped"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="250" y="170" width="240" height="-1"/>
